-Added very basic makefile
-removed #include "Stdafx.h" from all source files, gcc doesn't have precompiled
 headers like msvc.
-Added some missing include in several files
-Removed strange double-include protection from codewiz.hpp
-Removed DOS-compilation stuff from codewiz.hpp
-Renamed TRUE to true, FALSE to false, BOOL to bool and removed the definitions
 for them from codewiz.hpp
-Removed BYTE,WORD,DWORD definitions from codewiz.hpp these are already defined
 in Types/LibTypes.hpp
-Commented memset assembler routines in codewiz.hpp
-removed special WATCOM/MSVC #pragmas in lots of places in codewiz.hpp
-changed type of PALETTE_LENGTH to size_t
-added a SWAP function to codewiz.hpp, couldn't find one elsewhere in the
 project. Also added a SWAP function with an explicit temporary variable which
 is used at some places in the project (does this bring speed?)
-made destructor of Surface, Component, SpritePacked virtual
-changed usage of zeroMem to memset
-use memcpy instead of memcpyB
-Added a stub of RDTSC function to cTimeStamp.cpp, need an implementation there.
-Added a dummy GameTemplateView.hpp. Needs investigation why the Lib includes
 files from the main game.
-copied KeyScanCodeDefs.h from main game
-removed #if _MSC_VER > 1000 #pragma once #endif randomly from several files...
-removed /= (const float&) in fXYZ class (/= (float) is enough)
-gave up with the Lib/Main Game dependencies and added include paths to the main
game in the Makefiles...
-removed "aliasdef.h" from several files (it contained yet another definition of
  a boolean type...), several renames again :-/
-added int return type to getUnitInfoDrawLayer in GameConfig
-changed iRect constructor to use const types
-disabled all joystick code
-casted several floats to ints in ColorTable.cpp to avoid warnings
-Commented out several uses of _splitpath (which is win32 only) at FileList.cpp
-fixed some upper/lowercase errors in #include statements