@@ -1,0 +1,4 @@
+.depend
+.depend.bak
+config.mak
+
